[package]
name = "gwg_bindgen"
version = "0.1.0"
authors = ["Tomasz Sterna <tomek@sterna.link>"]
edition = "2018"

[dependencies]
gwg = { git = "https://github.com/not-fl3/good-web-game", package = "good-web-game" }
log = "0.4"
cfg-if = "0.1"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
simple_logger = "1.6"

[target.'cfg(target_arch = "wasm32")'.dependencies]
web_logger = "0.2"
wasm-bindgen = "0.2.67"
